objects/ssot__BundleProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ProductSKU__c</fullName>
        <label>Product SKU</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Product SKU</masterLabel>
            <refAttrDeveloperName>ProductSKU</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductStatusId__c</fullName>
        <label>Product Status</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Product Status</masterLabel>
            <refAttrDeveloperName>ProductStatusId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityCount__c</fullName>
        <label>Quantity Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Quantity Count</masterLabel>
            <refAttrDeveloperName>QuantityCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityInstallmentCount__c</fullName>
        <label>Quantity Installment Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Quantity Installment Count</masterLabel>
            <refAttrDeveloperName>QuantityInstallmentCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityInstallmentPeriodId__c</fullName>
        <label>Quantity Installment Period</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Quantity Installment Period</masterLabel>
            <refAttrDeveloperName>QuantityInstallmentPeriodId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityScheduleTypeId__c</fullName>
        <label>Quantity Schedule Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Quantity Schedule Type</masterLabel>
            <refAttrDeveloperName>QuantityScheduleTypeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasureId__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Quantity Unit Of Measure</masterLabel>
            <refAttrDeveloperName>QuantityUnitOfMeasureId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositAmountCurrency__c</fullName>
        <label>Required Deposit Amount Currency</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Required Deposit Amount Currency</masterLabel>
            <refAttrDeveloperName>RequiredDepositAmountCurrency</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositAmount__c</fullName>
        <label>Required Deposit Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Required Deposit Amount</masterLabel>
            <refAttrDeveloperName>RequiredDepositAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositPercentage__c</fullName>
        <label>Required Deposit Percentage</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Required Deposit Percentage</masterLabel>
            <refAttrDeveloperName>RequiredDepositPercentage</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiresInvididualUnitPricing__c</fullName>
        <label>Requires Individual Unit Pricing</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requires Individual Unit Pricing</masterLabel>
            <refAttrDeveloperName>RequiresInvididualUnitPricing</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueInstallmentCount__c</fullName>
        <label>Revenue Installment Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Revenue Installment Count</masterLabel>
            <refAttrDeveloperName>RevenueInstallmentCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueInstallmentPeriodId__c</fullName>
        <label>Revenue Installment Period</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Revenue Installment Period</masterLabel>
            <refAttrDeveloperName>RevenueInstallmentPeriodId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueScheduleTypeId__c</fullName>
        <label>Revenue Schedule Type</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Revenue Schedule Type</masterLabel>
            <refAttrDeveloperName>RevenueScheduleTypeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardProgramPointsCount__c</fullName>
        <label>Reward Program Points Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Reward Program Points Count</masterLabel>
            <refAttrDeveloperName>RewardProgramPointsCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEntitlementTemplateId__c</fullName>
        <label>Service Entitlement Template</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Entitlement Template</masterLabel>
            <refAttrDeveloperName>ServiceEntitlementTemplateId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StandardWarrantyLengthMonth__c</fullName>
        <label>Standard Warranty Length Month</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Standard Warranty Length Month</masterLabel>
            <refAttrDeveloperName>StandardWarrantyLengthMonth</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StockLedgerValuationAmountCurrency__c</fullName>
        <label>Stock Ledger Valuation Amount Currency</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Stock Ledger Valuation Amount Currency</masterLabel>
            <refAttrDeveloperName>StockLedgerValuationAmountCurrency</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StockLedgerValuationAmount__c</fullName>
        <label>Stock Ledger Valuation Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Stock Ledger Valuation Amount</masterLabel>
            <refAttrDeveloperName>StockLedgerValuationAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TareWeight__c</fullName>
        <label>Tare Weight</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Tare Weight</masterLabel>
            <refAttrDeveloperName>TareWeight</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValidForPeriodCount__c</fullName>
        <label>Valid For Period Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Valid For Period Count</masterLabel>
            <refAttrDeveloperName>ValidForPeriodCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValidForPeriodUOMId__c</fullName>
        <label>Valid For Period Unit Of Measure</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Valid For Period Unit Of Measure</masterLabel>
            <refAttrDeveloperName>ValidForPeriodUOMId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidFromDate__c</fullName>
        <label>Valid From Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Valid From Date</masterLabel>
            <refAttrDeveloperName>ValidFromDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ValidToDate__c</fullName>
        <label>Valid To Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Valid To Date</masterLabel>
            <refAttrDeveloperName>ValidToDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Version Number</masterLabel>
            <refAttrDeveloperName>VersionNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WeightUOMId__c</fullName>
        <label>Weight UOM</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Weight UOM</masterLabel>
            <refAttrDeveloperName>WeightUOMId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154470_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand_Id_map_BundleProduct_BrandId_N_rel</label>
        <referenceTo>ssot__Brand__dlm</referenceTo>
        <relationshipLabel>Brand_Id_map_BundleProduct_BrandId_N_rel</relationshipLabel>
        <relationshipName>rel_1697761154470_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154789_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_BrandId_map_Brand_Id_N_rel</label>
        <referenceTo>ssot__Brand__dlm</referenceTo>
        <relationshipLabel>BundleProduct_BrandId_map_Brand_Id_N_rel</relationshipLabel>
        <relationshipName>rel_1697761154789_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154860_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_BundleProduct_M_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_BundleProduct_M_rel</relationshipLabel>
        <relationshipName>rel_1697761154860_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Bundle Product</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Product</referenceEntityGroup>
        <referenceEntityName>BundleProduct</referenceEntityName>
        <referenceEntitySubjectArea>Product</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>